--- a/ProgramGevorderd1GebruikersApp/App.xaml
+++ b/ProgramGevorderd1GebruikersApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProgramGevorderd1GebruikersApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows/ReservationWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
